[gd_scene load_steps=25 format=3 uid="uid://b8dibdn7lv1o0"]

[ext_resource type="Environment" uid="uid://ysvc1jqnkuid" path="res://demo_assets/demo_scene_environment.tres" id="1_2t12c"]
[ext_resource type="Script" uid="uid://bwjnqe5mvkcbx" path="res://addons/aacc/scripts/scene_plugins/inputs/car_input.gd" id="2_1kif7"]
[ext_resource type="Shader" uid="uid://dcrk75c13vhp4" path="res://demo_assets/shaders/lens_flare_shader.gdshader" id="2_vx7r4"]
[ext_resource type="Script" uid="uid://cjsul5ik02rhk" path="res://demo_assets/shaders/lens_flare.gd" id="3_46dqb"]
[ext_resource type="Script" uid="uid://be5ommjjotu3v" path="res://addons/aacc/scripts/scene_plugins/setters/car_setter_basic.gd" id="3_vx7r4"]
[ext_resource type="Script" uid="uid://dncrn8e6ld0ld" path="res://demo_assets/scripts/scene_plugins/camera.gd" id="5_46lkv"]
[ext_resource type="Script" uid="uid://byfss6xpmml06" path="res://demo_assets/scripts/bug_103595_workaround.gd" id="6_2t12c"]
[ext_resource type="Script" uid="uid://bvecrtvsy80la" path="res://demo_assets/scripts/opengl_sun.gd" id="6_l5mqg"]
[ext_resource type="LightmapGIData" uid="uid://byfapvcgpdvnb" path="res://demo_assets/lightmaps/demo_scene.lmbake" id="6_s4qbg"]
[ext_resource type="PackedScene" uid="uid://cu2i0ah5ud0w1" path="res://demo_assets/subscenes/pathtest.blend" id="7_c6qrw"]
[ext_resource type="PackedScene" uid="uid://crko52geporbo" path="res://demo_assets/car_scenes/taxi.tscn" id="8_2t12c"]
[ext_resource type="PackedScene" uid="uid://ca1oyf482fq72" path="res://demo_assets/subscenes/ramptest.blend" id="9_l5mqg"]
[ext_resource type="ArrayOccluder3D" uid="uid://bc4g7cdctsbd0" path="res://demo_assets/demo_scene.occ" id="10_lmxsi"]
[ext_resource type="Script" uid="uid://dkjm5vktnco0f" path="res://demo_assets/scripts/hud/rpm_bar.gd" id="14_46lkv"]
[ext_resource type="Script" uid="uid://bkmhpdy41fs8f" path="res://demo_assets/scripts/hud/rpm_limiter_bar.gd" id="14_s4qbg"]
[ext_resource type="Script" uid="uid://cam0f0nudmuj2" path="res://demo_assets/scripts/hud/speed_label.gd" id="15_s4qbg"]
[ext_resource type="PackedScene" uid="uid://cs38a62litxur" path="res://addons/aacc/scenes/debug_label.tscn" id="17_2t12c"]

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_ny1lv"]
auto_exposure_enabled = true
auto_exposure_scale = 1.0
auto_exposure_speed = 1.0
auto_exposure_min_sensitivity = 800.0
auto_exposure_max_sensitivity = 2800.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qnhho"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0, 0, 0, 0.501961)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_46lkv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s4qbg"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_46lkv"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1kif7"]
render_priority = 0
shader = ExtResource("2_vx7r4")
shader_parameter/sun_position = Vector2(0, 0)
shader_parameter/tint = Vector3(1, 1, 1)
shader_parameter/tint_multiplier = 1.0

[sub_resource type="QuadMesh" id="QuadMesh_vx7r4"]
flip_faces = true
size = Vector2(2, 2)

[node name="DemoScene" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("1_2t12c")
camera_attributes = SubResource("CameraAttributesPractical_ny1lv")

[node name="Sunlight" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.942641, 0.0722491, -0.325895, 0, 0.976296, 0.21644, 0.333807, -0.204025, 0.920297, 0, 0, 0)
light_color = Color(1, 0.909804, 0.576471, 1)
light_energy = 16.0
light_volumetric_fog_energy = 0.0
light_cull_mask = 4293918721
shadow_enabled = true
shadow_bias = 0.0
shadow_normal_bias = 0.0
shadow_caster_mask = 4294967294
directional_shadow_blend_splits = true
directional_shadow_pancake_size = 50.0
script = ExtResource("6_l5mqg")

[node name="SunlightDynamic" type="DirectionalLight3D" parent="Sunlight"]
light_color = Color(1, 0.909804, 0.576471, 1)
light_energy = 16.0
light_bake_mode = 0
light_cull_mask = 4294967294
shadow_enabled = true
directional_shadow_blend_splits = true
directional_shadow_pancake_size = 50.0
sky_mode = 1
script = ExtResource("6_2t12c")

[node name="LightmapGI" type="LightmapGI" parent="."]
shadowmask_mode = 2
texel_scale = 4.0
generate_probes_subdiv = 0
light_data = ExtResource("6_s4qbg")

[node name="pathtest" parent="." instance=ExtResource("7_c6qrw")]

[node name="Taxi" parent="." instance=ExtResource("8_2t12c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="ramptest" parent="." instance=ExtResource("9_l5mqg")]
transform = Transform3D(-0.952601, -0.0225841, -0.304014, -0.0107575, 1.99987, -0.00343316, 0.304033, -9.31321e-09, -0.952662, 145.31, 9.88008, -125.437)

[node name="ramptest2" parent="." instance=ExtResource("9_l5mqg")]
transform = Transform3D(-0.999863, -2.11876e-08, 0.0331244, -0.00285096, 0.985073, -0.344223, -0.016315, -0.172135, -1.96988, 172.325, 8.77901, -0.812098)

[node name="OccluderInstance3D" type="OccluderInstance3D" parent="."]
occluder = ExtResource("10_lmxsi")
bake_mask = 4294967293

[node name="ReflectionProbe" type="ReflectionProbe" parent="."]
blend_distance = 0.0
size = Vector3(1000, 1000, 1000)
origin_offset = Vector3(19, 1, 241)
enable_shadows = true
cull_mask = 1048571

[node name="HUDMargin" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HUD" type="Control" parent="HUDMargin"]
layout_mode = 2
mouse_filter = 2

[node name="SpeedPanel" type="PanelContainer" parent="HUDMargin/HUD"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_qnhho")

[node name="VBox" type="VBoxContainer" parent="HUDMargin/HUD/SpeedPanel"]
layout_mode = 2

[node name="RPMBar" type="ProgressBar" parent="HUDMargin/HUD/SpeedPanel/VBox"]
custom_minimum_size = Vector2(150, 10)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_46lkv")
theme_override_styles/fill = SubResource("StyleBoxFlat_s4qbg")
max_value = 1.0
step = 0.0
value = 0.5
show_percentage = false
script = ExtResource("14_46lkv")

[node name="RPMBarLimit" type="ProgressBar" parent="HUDMargin/HUD/SpeedPanel/VBox/RPMBar"]
show_behind_parent = true
custom_minimum_size = Vector2(150, 10)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_46lkv")
theme_override_styles/fill = SubResource("StyleBoxFlat_46lkv")
max_value = 1.0
step = 0.0
value = 0.1
fill_mode = 1
show_percentage = false
script = ExtResource("14_s4qbg")

[node name="SpeedContainer" type="GridContainer" parent="HUDMargin/HUD/SpeedPanel/VBox"]
layout_mode = 2
size_flags_horizontal = 8
columns = 3
script = ExtResource("15_s4qbg")

[node name="GearBadge" type="Label" parent="HUDMargin/HUD/SpeedPanel/VBox/SpeedContainer"]
layout_mode = 2
text = "Gear"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Gear" type="Label" parent="HUDMargin/HUD/SpeedPanel/VBox/SpeedContainer"]
layout_mode = 2
text = "1"
horizontal_alignment = 2
vertical_alignment = 1

[node name="GearTransmission" type="Label" parent="HUDMargin/HUD/SpeedPanel/VBox/SpeedContainer"]
layout_mode = 2
text = "AUTO"
horizontal_alignment = 2
vertical_alignment = 1

[node name="TotalBadge" type="Label" parent="HUDMargin/HUD/SpeedPanel/VBox/SpeedContainer"]
layout_mode = 2
text = "Total"
horizontal_alignment = 2
vertical_alignment = 1

[node name="TotalSpeed" type="Label" parent="HUDMargin/HUD/SpeedPanel/VBox/SpeedContainer"]
layout_mode = 2
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="TotalUnit" type="Label" parent="HUDMargin/HUD/SpeedPanel/VBox/SpeedContainer"]
layout_mode = 2
text = "km/h"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ForwardBadge" type="Label" parent="HUDMargin/HUD/SpeedPanel/VBox/SpeedContainer"]
layout_mode = 2
text = "Forward"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ForwardSpeed" type="Label" parent="HUDMargin/HUD/SpeedPanel/VBox/SpeedContainer"]
layout_mode = 2
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ForwardUnit" type="Label" parent="HUDMargin/HUD/SpeedPanel/VBox/SpeedContainer"]
layout_mode = 2
text = "km/h"
horizontal_alignment = 2
vertical_alignment = 1

[node name="SideBadge" type="Label" parent="HUDMargin/HUD/SpeedPanel/VBox/SpeedContainer"]
layout_mode = 2
text = "Side"
horizontal_alignment = 2
vertical_alignment = 1

[node name="SideSpeed" type="Label" parent="HUDMargin/HUD/SpeedPanel/VBox/SpeedContainer"]
layout_mode = 2
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="SideUnit" type="Label" parent="HUDMargin/HUD/SpeedPanel/VBox/SpeedContainer"]
layout_mode = 2
text = "km/h"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Plugins" type="Node" parent="."]

[node name="CarSetter" type="Node" parent="Plugins" node_paths=PackedStringArray("car_to_set")]
process_priority = -1000
script = ExtResource("3_vx7r4")
car_to_set = NodePath("../../Taxi")
metadata/_custom_type_script = "uid://be5ommjjotu3v"

[node name="CarInput" type="Node" parent="Plugins"]
script = ExtResource("2_1kif7")
metadata/_custom_type_script = "uid://bwjnqe5mvkcbx"

[node name="Camera" type="Node" parent="Plugins"]
script = ExtResource("5_46lkv")
metadata/_custom_type_script = "uid://dncrn8e6ld0ld"

[node name="Camera" type="Camera3D" parent="Plugins/Camera"]
physics_interpolation_mode = 2
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 4)
doppler_tracking = 1
far = 1000.0

[node name="LensMesh" type="MeshInstance3D" parent="Plugins/Camera/Camera" node_paths=PackedStringArray("sun")]
visible = false
layers = 2
material_override = SubResource("ShaderMaterial_1kif7")
cast_shadow = 0
extra_cull_margin = 16384.0
ignore_occlusion_culling = true
gi_mode = 0
mesh = SubResource("QuadMesh_vx7r4")
script = ExtResource("3_46dqb")
sun = NodePath("../../../../Sunlight")
flare_intensity = 0.25

[node name="OcclusionCast" type="RayCast3D" parent="Plugins/Camera/Camera/LensMesh"]
enabled = false
target_position = Vector3(0, 0, -1000)

[node name="DebugLabel" parent="Plugins" instance=ExtResource("17_2t12c")]

[node name="Taxi2" parent="." instance=ExtResource("8_2t12c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 37.5404, -15, -1.9569)

[node name="Taxi3" parent="." instance=ExtResource("8_2t12c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 29.8185, -15, -3.69499)

[node name="Taxi4" parent="." instance=ExtResource("8_2t12c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 27.5603, -15, 2.97384)

[node name="Taxi5" parent="." instance=ExtResource("8_2t12c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 39.8467, -15, 4.68791)

[node name="Taxi6" parent="." instance=ExtResource("8_2t12c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 49.2175, -15, -4.13662)

[node name="Taxi7" parent="." instance=ExtResource("8_2t12c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 21.7843, -15, -2.22593)

[node name="Taxi8" parent="." instance=ExtResource("8_2t12c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 34.7256, -15, 5.99226)

[node name="Taxi9" parent="." instance=ExtResource("8_2t12c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 21.293, -15, 6.62562)

[node name="Taxi10" parent="." instance=ExtResource("8_2t12c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 17.3214, -15, -3.7618)

[node name="Taxi11" parent="." instance=ExtResource("8_2t12c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 47.6502, -15, 16.6985)

[node name="Taxi12" parent="." instance=ExtResource("8_2t12c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 21.5161, -15, 23.9141)

[node name="Taxi13" parent="." instance=ExtResource("8_2t12c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 32.2937, -15, 13.3876)

[node name="Taxi14" parent="." instance=ExtResource("8_2t12c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13.8131, -15, 6.76665)

[node name="Taxi15" parent="." instance=ExtResource("8_2t12c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 44.8905, -15, 1.29466)

[node name="Taxi16" parent="." instance=ExtResource("8_2t12c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 30.8981, -15, -8.13416)

[node name="Taxi17" parent="." instance=ExtResource("8_2t12c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14.7044, -15, -5.13257)

[node name="Taxi18" parent="." instance=ExtResource("8_2t12c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 25.425, -15, -1.70817)

[node name="Taxi19" parent="." instance=ExtResource("8_2t12c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.6445, -15, 0.0705662)

[node name="Taxi20" parent="." instance=ExtResource("8_2t12c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.1864, -15, -2.51114)

[node name="Taxi21" parent="." instance=ExtResource("8_2t12c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 42.0027, -15, -5.40731)

[node name="Taxi22" parent="." instance=ExtResource("8_2t12c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 52.7302, -15, -8.21415)

[node name="Taxi23" parent="." instance=ExtResource("8_2t12c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 56.7072, -15, 0.510138)

[node name="Taxi24" parent="." instance=ExtResource("8_2t12c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 52.4349, -15, 4.24293)

[node name="Taxi25" parent="." instance=ExtResource("8_2t12c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 36.5729, -15, -7.30803)

[node name="Taxi26" parent="." instance=ExtResource("8_2t12c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 24.6303, -15, -7.11934)

[node name="Taxi27" parent="." instance=ExtResource("8_2t12c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20.1436, -15, 1.26046)

[node name="Taxi28" parent="." instance=ExtResource("8_2t12c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 28.6825, -15, 8.35104)

[node name="Taxi29" parent="." instance=ExtResource("8_2t12c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 17.4071, -15, 10.4283)

[node name="Taxi30" parent="." instance=ExtResource("8_2t12c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 31.4778, -15, 0.302418)

[node name="Taxi31" parent="." instance=ExtResource("8_2t12c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 40.0796, -15, 14.1223)
